unite FE and BE login and register
